[package]
name = "fdecimal"
version = "0.0.2"
edition = "2021"
authors = ["Neo"]
description = "Arbitrary precision fast decimal numbers"
documentation = "https://docs.rs/fdecimal"
homepage = "https://github.com/neogenie/fdecimal"
repository = "https://github.com/neogenie/fdecimal"
keywords = [
    "numeric",
    "decimal",
    "arbitrary-precision",
]
categories = [ "mathematics", "science", "no-std" ]
license = "MIT"
autobenches = false

[lib]
bench = false

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", features = [ "html_reports" ] }
rstest = { version = "0.23.0" }

[build-dependencies]
autocfg = "1"

[features]

[[bench]]
name = "benchmark"
harness = false
